--- a/foundry/package.json
+++ b/foundry/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
-    "contracts": "^0.4.0"
+    "contracts": "^0.4.0",
+    "package.json": "^2.0.1"
   }
 }
